2011-12-23  Corinna Vinschen  <vinschen@redhat.com>

	* pinfo.cc (pinfo_basic::pinfo_basic): Fix formatting.  Set uid and gid
	to default values to accommodate early initialization of shared user
	info.  Add comment.

2011-12-22  Corinna Vinschen  <vinschen@redhat.com>

	* spawn.cc (child_info_spawn::worker): Add CREATE_BREAKAWAY_FROM_JOB
	to c_flags only if current process is member of a job and breakaway
	is allowed.

2011-12-22  Corinna Vinschen  <vinschen@redhat.com>

	* external.cc (cygwin_internal): Implement CW_ALLOC_DRIVE_MAP,
	CW_MAP_DRIVE_MAP, CW_FREE_DRIVE_MAP.
	* fhandler_process.cc: Include mount.h.
	(get_volume_path_names_for_volume_name): Move to mount.cc.
	(struct dos_drive_mappings): Ditto.
	* mount.cc (get_volume_path_names_for_volume_name): Move here.
	(dos_drive_mappings::dos_drive_mappings): Ditto.
	(dos_drive_mappings::fixup_if_match): Ditto.
	(dos_drive_mappings::~dos_drive_mappings): Ditto.
	* mount.h (class dos_drive_mappings): Declare her.
	* include/sys/cygwin.h (cygwin_getinfo_types): Add CW_ALLOC_DRIVE_MAP,
	CW_MAP_DRIVE_MAP, CW_FREE_DRIVE_MAP.
	* include/cygwin/version.h: Bump API minor number.

2011-12-22  Corinna Vinschen  <vinschen@redhat.com>

	* fhandler_process.cc: Drop unneeded includes.

2011-12-22  Corinna Vinschen  <vinschen@redhat.com>

	Throughout use wincap.allocation_granularity instead of getpagesize.
	Throughout use wincap.page_size instead of getsystempagesize.
	Throughout use "status" as variable name to hold NTSTATUS values.
	* fhandler_mem.cc: Check for NT_SUCCESS rather than for STATUS_SUCCESS.
	Fix debug_printf output.  Rectify long statements.  Fix comment
	formatting.
	* fhandler_proc.cc: Ditto.
	(format_proc_swaps): Drop useless test for ERROR_PROC_NOT_FOUND.
	* fhandler_process.cc: Ditto as in fhandler_mem.cc.
	(get_process_state): Rearrange allocation loop.  Use malloc/realloc.
	(get_mem_values): Fix potential NULL pointer usage.  Drop unused
	variable.